# HSE-MS-Final-Project

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
db/: tasks_init.sql  urls_init.sql
migrations/url_shortener/: 000001_create_short_urls_table.up.sql  000002_create_index.up.sql
pkg/Config/: config.py
pkg/config/: config.py
pkg/logger/: logger.py
pkg/model/: tasks.py  urls.py
todo_service/: Dockerfile  README.md  context.py  main.py  pyproject.toml
todo_service/config/: config.yaml
todo_service/storage/sqllite/: storage.py
todo_service/todo_service/: Dockerfile
url-shortener/: Dockerfile  pyproject.toml
url_shortener/: Dockerfile  README.md  context.py  main.py
url_shortener/config/: config.yaml
url_shortener/storage/sqllite/: storage.py
