[tool.poetry]
name = "hse-ms-final-project"
version = "0.1.0"
description = "FastAPI microservices"
authors = ["PosokhovVadim <posokhovvadyusha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.34.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
todo-service = "todo_service.main:main"
url-shortener = "url_shortener.main:main"